--- a/map.css
+++ b/map.css
@@ -1,7 +1,33 @@
 svg {
     background-color: aquamarine;
     stroke-width: 0.3;
-    fill:transparent;
+    fill: transparent;
     stroke:black
 }
+
+path {
+   fill: white
+}
+
+.loader {
+    position: fixed;
+    border: 16px solid #f3f3f3; /* Light grey */
+    border-top: 16px solid #3498db; /* Blue */
+    border-radius: 50%;
+    background-color: rgba(0,0,0,0.5);
+    top: 20;
+    left: 0;
+    right: 200;
+    bottom: 0;
+    z-index: 2;
+    width: 200px;
+    height: 200px;
+    animation: spin 2s linear infinite;
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+
 
